# MC970-E2

01-OmpFor-MatMul/: CMakeLists.txt  README.md  cenapad.sh
01-OmpFor-MatMul/src/: matmul-parallel.c
02-OmpFor-Prime/: CMakeLists.txt  README.md  cenapad.sh
02-OmpFor-Prime/bench/: flamegraph
02-OmpFor-Prime/src/: prime-optimized.c  prime-parallel.c
03-OmpTask-Zip/: CMakeLists.txt  README.md  cenapad.sh
03-OmpTask-Zip/src/: zip-parallel.c
04-OmpTask-TreeReduce/: CMakeLists.txt  README.md  cenapad.sh
04-OmpTask-TreeReduce/src/: matmul-parallel.c
bench/: cenapad.pbs  flamegraph.sh  wait.sh
